# keycloak-admin-mcp

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/: dependabot.yml
.github/codeql/: README.md  codeql-rust.yml
.github/codeql/actions-workflow-security/: SarifUploadWithoutCategory.qhelp  SarifUploadWithoutCategory.ql  WorkflowSecurity.qll
.github/workflows/: code-coverage.yml  codeql-query-tests.yml  codeql.yml  comprehensive-sarif.yml  dependency-governance.yml  devskim.yml  kc-admin-mcp-hosted-tests.yml  kc-admin-mcp-release-artifacts.yml  osv-scanner.yml  release-hygiene.yml
docs/: AGENTS.md  RELEASE_READINESS.md  RUNBOOK.md  SAFETY_CHECKLIST.md  TEST_PLAN.md  delegated-admin-exchange-design.md  dependency-governance.md  provenance-test-gate-design.md
kc-admin-gateway/: AGENTS.md  Cargo.toml  README.md
kc-admin-gateway/src/: AGENTS.md  auth.rs  config.rs  edge.rs  errors.rs  exchange.rs  handlers.rs  http.rs  log_sanitize.rs  logging.rs  main.rs  tls.rs
kc-admin-gateway/tests/: integration_smoke.rs
kc-admin-mcp/: AGENTS.md  Cargo.toml  README.md  build.rs
kc-admin-mcp/spec/: tool_schema_snapshot.v1.json
kc-admin-mcp/src/: AGENTS.md  admission.rs  audit.rs  auth.rs  config.rs  edge.rs  errors.rs  gateway.rs  log_context.rs  logging.rs  main.rs  metrics.rs  provenance.rs  server.rs  test_support.rs  tls.rs
kc-admin-mcp/src/tools/: bundles.rs  client_scopes.rs  clients.rs  events.rs  groups.rs  identity_providers.rs  mod.rs  observability.rs  realms.rs  roles.rs  shared.rs  users.rs  validation.rs
kc-admin-mcp/src/tools/clients/: core.rs  mappers.rs  roles.rs  scopes.rs  secrets.rs
kc-admin-mcp/src/tools/realms/: core.rs  events.rs  registration.rs  scopes.rs
kc-admin-mcp/src/tools/users/: access.rs  core.rs  groups.rs  password.rs
kc-admin-mcp/tests/: integration_smoke.rs
scripts/: dependency_governance_check.sh  release_hygiene_check.sh
