[package]
name = "kc-admin-mcp"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
axum = "0.8.8"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
rmcp = { version = "=1.7.0", features = ["server", "transport-streamable-http-server", "macros"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "signal"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.13.1", default-features = false, features = ["json", "form", "rustls"] }
futures = "0.3.31"
schemars = "1.2.0"
thiserror = "2.0.18"
uuid = { version = "1.19.0", features = ["v4"] }
sha2 = "0.11.0"
base64 = "0.22.1"
regex = "1.12.2"
time = { version = "0.3.47", features = ["formatting", "parsing"] }
rustls = { version = "0.23.36", default-features = false, features = ["aws-lc-rs"] }
mcp-toolkit-auth = { workspace = true }
mcp-toolkit-core = { workspace = true }
mcp-toolkit-http = { workspace = true, features = ["session", "session-sqlite"] }
mcp-toolkit-observability = { workspace = true }

[dev-dependencies]
tower = "0.5.3"
mcp-toolkit-testing = { workspace = true }
